feat(devcontainer): add comprehensive devcontainer setup with Docker and scripts
- Add Dockerfile with Python 3.11 base and essential tools
- Add docker-compose.dev.yml for multi-service development environment
- Add post-create.sh and post-start.sh scripts for environment setup and service readiness
- Update devcontainer.json with extensions and port forwarding

Also add:
- GitHub workflows for CI, CD, dependency updates, and release automation
- Build automation script (scripts/build.py) with CLI commands
- Load testing configuration with Locust (tests/load/locustfile.py)
- Performance benchmark tests (tests/performance/test_benchmarks.py)

This setup enables streamlined development, testing, and deployment workflows.

Co-authored-by: terragon-labs[bot] <terragon-labs[bot]@users.noreply.github.com>

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -25,7 +25,21 @@
         "ms-azuretools.vscode-docker",
         "GitHub.vscode-github-actions",
         "ms-python.pytest",
-        "tamasfe.even-better-toml"
+        "tamasfe.even-better-toml",
+        "GitHub.copilot",
+        "GitHub.copilot-chat",
+        "ms-vscode.vscode-markdown",
+        "DavidAnson.vscode-markdownlint",
+        "ms-vscode.test-adapter-converter",
+        "ms-vscode.live-server",
+        "esbenp.prettier-vscode",
+        "ms-vscode.vscode-thunder-client",
+        "humao.rest-client",
+        "streetsidesoftware.code-spell-checker",
+        "ms-vscode.vscode-github-pullrequest",
+        "eamodio.gitlens",
+        "donjayamanne.githistory",
+        "ms-vscode-remote.remote-containers"
       ],
       "settings": {
         "python.defaultInterpreterPath": "/usr/local/bin/python",
@@ -55,7 +69,7 @@
     }
   },
 
-  "forwardPorts": [8000, 5432, 6379],
+  "forwardPorts": [8000, 5432, 6379, 8080, 9090, 3000],
   "portsAttributes": {
     "8000": {
       "label": "FastAPI Server",
@@ -67,6 +81,18 @@
     },
     "6379": {
       "label": "Redis",
+      "onAutoForward": "silent"
+    },
+    "8080": {
+      "label": "Documentation",
+      "onAutoForward": "openPreview"
+    },
+    "9090": {
+      "label": "Prometheus",
+      "onAutoForward": "silent"
+    },
+    "3000": {
+      "label": "Grafana",
       "onAutoForward": "silent"
     }
   },
